// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Visual regression: Banker underwriting DecisioningMatrix snapshots snapshot: approve cell active (T:80, F:75) 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop"
      aria-selected="false"
      data-active="false"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#fff8e1"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#c8e6c9"
        height="116"
        rx="8"
        stroke="#15803D"
        stroke-width="2.5"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
      <circle
        cx="366"
        cy="110"
        fill="#15803D"
        r="5"
      />
      <text
        fill="#15803D"
        font-size="9"
        font-weight="600"
        x="376"
        y="114"
      >
        Current
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days"
      aria-selected="false"
      data-active="false"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#f5f5f5"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required"
      aria-selected="false"
      data-active="false"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e3f2fd"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 80, Financial Health 75"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="360"
        x2="372"
        y1="56"
        y2="56"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="366"
        x2="366"
        y1="50"
        y2="62"
      />
      <circle
        cx="366"
        cy="56"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="374"
        y="38"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="380"
        y="54"
      >
        T:
        80
         F:
        75
      </text>
    </g>
  </svg>
</div>
`;

exports[`Visual regression: Banker underwriting DecisioningMatrix snapshots snapshot: conditional cell active (T:70, F:30) 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#ffecb3"
        height="116"
        rx="8"
        stroke="#B45309"
        stroke-width="2.5"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
      <circle
        cx="154"
        cy="110"
        fill="#B45309"
        r="5"
      />
      <text
        fill="#B45309"
        font-size="9"
        font-weight="600"
        x="164"
        y="114"
      >
        Current
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms"
      aria-selected="false"
      data-active="false"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e8f5e9"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days"
      aria-selected="false"
      data-active="false"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#f5f5f5"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required"
      aria-selected="false"
      data-active="false"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e3f2fd"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 70, Financial Health 30"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="169.2"
        x2="181.2"
        y1="80"
        y2="80"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="175.2"
        x2="175.2"
        y1="74"
        y2="86"
      />
      <circle
        cx="175.2"
        cy="80"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="183.2"
        y="62"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="189.2"
        y="78"
      >
        T:
        70
         F:
        30
      </text>
    </g>
  </svg>
</div>
`;

exports[`Visual regression: Banker underwriting DecisioningMatrix snapshots snapshot: decline cell active (T:35, F:25) 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop"
      aria-selected="false"
      data-active="false"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#fff8e1"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms"
      aria-selected="false"
      data-active="false"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e8f5e9"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e0e0e0"
        height="116"
        rx="8"
        stroke="#6B7280"
        stroke-width="2.5"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
      <circle
        cx="154"
        cy="230"
        fill="#6B7280"
        r="5"
      />
      <text
        fill="#6B7280"
        font-size="9"
        font-weight="600"
        x="164"
        y="234"
      >
        Current
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required"
      aria-selected="false"
      data-active="false"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e3f2fd"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 35, Financial Health 25"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="148"
        x2="160"
        y1="164"
        y2="164"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="154"
        x2="154"
        y1="158"
        y2="170"
      />
      <circle
        cx="154"
        cy="164"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="162"
        y="146"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="168"
        y="162"
      >
        T:
        35
         F:
        25
      </text>
    </g>
  </svg>
</div>
`;

exports[`Visual regression: Banker underwriting DecisioningMatrix snapshots snapshot: refer cell active (T:40, F:65) 1`] = `
<div
  aria-label="Loan decisioning matrix — TRUST vs Financial Health"
  class="inline-block"
  role="group"
>
  <svg
    aria-hidden="false"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <text
      dominant-baseline="central"
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      transform="rotate(-90, 16, 128)"
      x="8"
      y="128"
    >
      TRUST ↑
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="68"
    >
      High ≥
      60
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="10"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low &lt;
      60
    </text>
    <text
      fill="#64748b"
      font-size="11"
      font-weight="600"
      text-anchor="middle"
      x="260"
      y="276"
    >
      Financial Health →
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="154"
      y="262"
    >
      Low &lt;
      50
    </text>
    <text
      fill="#94a3b8"
      font-size="10"
      text-anchor="middle"
      x="366"
      y="262"
    >
      High ≥
      50
    </text>
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1.5"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <g
      aria-label="High TRUST, Low Financial Health: Conditional Approve Cash-flow coaching — EMI aligned to crop"
      aria-selected="false"
      data-active="false"
      data-cell="conditional"
      data-testid="matrix-cell-conditional"
      role="gridcell"
      tabindex="0"
    >
      <rect
        fill="#fff8e1"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="10"
      />
      <text
        fill="#B45309"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="44"
      >
        Conditional Approve
      </text>
      <text
        fill="#B45309"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="62"
      >
        Cash-flow coaching
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="84"
      >
        Ticket: 
        Reduced
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="154"
        y="98"
      >
        Tenor: 
        Seasonal
      </text>
    </g>
    <g
      aria-label="High TRUST, High Financial Health: Approve Standard terms — Standard terms"
      aria-selected="false"
      data-active="false"
      data-cell="approve"
      data-testid="matrix-cell-approve"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#e8f5e9"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="262"
        y="10"
      />
      <text
        fill="#15803D"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="44"
      >
        Approve
      </text>
      <text
        fill="#15803D"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="62"
      >
        Standard terms
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="84"
      >
        Ticket: 
        Standard
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="98"
      >
        Tenor: 
        12 months
      </text>
    </g>
    <g
      aria-label="Low TRUST, Low Financial Health: Decline Coaching path + re-apply — Coaching path + re-apply 90 days"
      aria-selected="false"
      data-active="false"
      data-cell="decline"
      data-testid="matrix-cell-decline"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#f5f5f5"
        height="116"
        rx="8"
        stroke="transparent"
        stroke-width="0"
        width="208"
        x="50"
        y="130"
      />
      <text
        fill="#6B7280"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="154"
        y="164"
      >
        Decline
      </text>
      <text
        fill="#6B7280"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="154"
        y="182"
      >
        Coaching path + re-apply
      </text>
    </g>
    <g
      aria-label="Low TRUST, High Financial Health: Refer for Review Verify first — Extra KYC required (current position)"
      aria-selected="true"
      data-active="true"
      data-cell="refer"
      data-testid="matrix-cell-refer"
      role="gridcell"
      tabindex="-1"
    >
      <rect
        fill="#bbdefb"
        height="116"
        rx="8"
        stroke="#1D4ED8"
        stroke-width="2.5"
        width="208"
        x="262"
        y="130"
      />
      <text
        fill="#1D4ED8"
        font-size="13"
        font-weight="700"
        text-anchor="middle"
        x="366"
        y="164"
      >
        Refer for Review
      </text>
      <text
        fill="#1D4ED8"
        font-size="10"
        opacity="0.7"
        text-anchor="middle"
        x="366"
        y="182"
      >
        Verify first
      </text>
      <text
        fill="#64748b"
        font-size="9"
        text-anchor="middle"
        x="366"
        y="204"
      >
        Ticket: 
        Hold
      </text>
      <circle
        cx="366"
        cy="230"
        fill="#1D4ED8"
        r="5"
      />
      <text
        fill="#1D4ED8"
        font-size="9"
        font-weight="600"
        x="376"
        y="234"
      >
        Current
      </text>
    </g>
    <g
      aria-label="Score position: TRUST 40, Financial Health 65"
    >
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="317.6"
        x2="329.6"
        y1="152"
        y2="152"
      />
      <line
        stroke="#1e293b"
        stroke-width="1.5"
        x1="323.6"
        x2="323.6"
        y1="146"
        y2="158"
      />
      <circle
        cx="323.6"
        cy="152"
        fill="#1e293b"
        r="4"
      />
      <rect
        fill="#1e293b"
        height="24"
        opacity="0.9"
        rx="4"
        width="74"
        x="331.6"
        y="134"
      />
      <text
        fill="white"
        font-size="9"
        font-weight="600"
        x="337.6"
        y="150"
      >
        T:
        40
         F:
        65
      </text>
    </g>
  </svg>
</div>
`;

exports[`Visual regression: Banker underwriting DrishtiStressLens snapshots snapshot: baseline with stress scenarios 1`] = `
<div
  data-testid="drishti-stress-lens"
>
  <div
    class="flex flex-wrap items-center gap-2 mb-4"
    data-testid="scenario-toggles"
  >
    <span
      class="text-xs font-semibold text-slate-500 mr-1"
    >
      Stress scenarios:
    </span>
    <button
      aria-pressed="true"
      class="
                px-3 py-1.5 rounded-full text-xs font-semibold border-2 transition-all
                text-white
              "
      data-testid="toggle-climate-stress"
      style="background-color: rgb(220, 38, 38); border-color: rgb(220, 38, 38);"
    >
      Climate Stress
    </button>
    <button
      aria-pressed="true"
      class="
                px-3 py-1.5 rounded-full text-xs font-semibold border-2 transition-all
                text-white
              "
      data-testid="toggle-market-adverse"
      style="background-color: rgb(234, 88, 12); border-color: rgb(234, 88, 12);"
    >
      Market Adverse
    </button>
  </div>
  <svg
    aria-label="DRISHTI stress scenario overlay"
    data-testid="stress-svg"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <rect
      fill="#f8fafc"
      height="240"
      rx="8"
      stroke="#e2e8f0"
      stroke-width="1"
      width="424"
      x="48"
      y="8"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <text
      fill="#94a3b8"
      font-size="9"
      text-anchor="middle"
      x="154"
      y="264"
    >
      Low FHS
    </text>
    <text
      fill="#94a3b8"
      font-size="9"
      text-anchor="middle"
      x="366"
      y="264"
    >
      High FHS
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="9"
      text-anchor="end"
      x="36"
      y="68"
    >
      High T
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="9"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low T
    </text>
    <circle
      cx="353.28"
      cy="68"
      fill="#1e293b"
      r="6"
      stroke="white"
      stroke-width="2"
    />
    <text
      fill="#1e293b"
      font-size="9"
      font-weight="600"
      x="363.28"
      y="60"
    >
      Baseline
    </text>
    <g
      data-testid="stress-marker-climate-stress"
    >
      <defs>
        <marker
          id="arrow-climate-stress"
          markerHeight="6"
          markerWidth="8"
          orient="auto-start-reverse"
          refX="8"
          refY="4"
          viewBox="0 0 10 8"
        >
          <path
            d="M0,0 L10,4 L0,8 Z"
            fill="#dc2626"
          />
        </marker>
      </defs>
      <line
        marker-end="url(#arrow-climate-stress)"
        opacity="0.8"
        stroke="#dc2626"
        stroke-dasharray="6 3"
        stroke-width="2"
        x1="353.28"
        x2="149.76"
        y1="68"
        y2="68"
      />
      <circle
        cx="149.76"
        cy="68"
        fill="none"
        r="5"
        stroke="#dc2626"
        stroke-dasharray="3 2"
        stroke-width="2"
      />
      <text
        fill="#dc2626"
        font-size="8"
        font-weight="600"
        text-anchor="end"
        x="139.76"
        y="60"
      >
        Climate Stress
      </text>
    </g>
    <g
      data-testid="stress-marker-market-adverse"
    >
      <defs>
        <marker
          id="arrow-market-adverse"
          markerHeight="6"
          markerWidth="8"
          orient="auto-start-reverse"
          refX="8"
          refY="4"
          viewBox="0 0 10 8"
        >
          <path
            d="M0,0 L10,4 L0,8 Z"
            fill="#ea580c"
          />
        </marker>
      </defs>
      <line
        marker-end="url(#arrow-market-adverse)"
        opacity="0.8"
        stroke="#ea580c"
        stroke-dasharray="6 3"
        stroke-width="2"
        x1="353.28"
        x2="247.28"
        y1="68"
        y2="68"
      />
      <circle
        cx="247.28"
        cy="68"
        fill="none"
        r="5"
        stroke="#ea580c"
        stroke-dasharray="3 2"
        stroke-width="2"
      />
      <text
        fill="#ea580c"
        font-size="8"
        font-weight="600"
        text-anchor="end"
        x="237.28"
        y="60"
      >
        Market Adverse
      </text>
    </g>
  </svg>
  <div
    class="
          mt-4 rounded-lg border-2 p-4 flex items-center justify-between
          border-red-200 bg-red-50
        "
    data-testid="worst-case-summary"
  >
    <div>
      <p
        class="text-xs font-medium text-slate-500"
      >
        Worst-case action (under stress)
      </p>
      <p
        class="text-lg font-bold mt-0.5"
        data-testid="worst-case-action"
        style="color: rgb(180, 83, 9);"
      >
        Conditional Approve
      </p>
    </div>
    <div
      class="text-right"
    >
      <p
        class="text-xs text-slate-500"
      >
        Baseline
      </p>
      <p
        class="text-sm font-semibold"
        data-testid="baseline-action"
        style="color: rgb(21, 128, 61);"
      >
        Approve
      </p>
    </div>
  </div>
  <div
    class="mt-3 space-y-2"
    data-testid="scenario-details"
  >
    <div
      class="flex items-center gap-3 text-xs p-2 rounded-lg bg-white border border-slate-100"
      data-testid="scenario-detail-climate-stress"
    >
      <div
        class="w-3 h-3 rounded-full flex-shrink-0"
        style="background-color: rgb(220, 38, 38);"
      />
      <div
        class="flex-1"
      >
        <span
          class="font-semibold text-slate-700"
        >
          Climate Stress
        </span>
        <span
          class="text-slate-400 ml-2"
        >
          Monsoon deficit -30%
        </span>
      </div>
      <div
        class="text-right"
      >
        <span
          class="text-slate-500"
        >
          FHS: 
          72
           → 
          24
        </span>
        <span
          class="ml-2 font-semibold"
          style="color: rgb(180, 83, 9);"
        >
          Conditional Approve
        </span>
      </div>
    </div>
    <div
      class="flex items-center gap-3 text-xs p-2 rounded-lg bg-white border border-slate-100"
      data-testid="scenario-detail-market-adverse"
    >
      <div
        class="w-3 h-3 rounded-full flex-shrink-0"
        style="background-color: rgb(234, 88, 12);"
      />
      <div
        class="flex-1"
      >
        <span
          class="font-semibold text-slate-700"
        >
          Market Adverse
        </span>
        <span
          class="text-slate-400 ml-2"
        >
          Commodity price drop -20%
        </span>
      </div>
      <div
        class="text-right"
      >
        <span
          class="text-slate-500"
        >
          FHS: 
          72
           → 
          47
        </span>
        <span
          class="ml-2 font-semibold"
          style="color: rgb(180, 83, 9);"
        >
          Conditional Approve
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual regression: Banker underwriting DrishtiStressLens snapshots snapshot: no scenarios (empty) 1`] = `
<div
  data-testid="drishti-stress-lens"
>
  <div
    class="flex flex-wrap items-center gap-2 mb-4"
    data-testid="scenario-toggles"
  >
    <span
      class="text-xs font-semibold text-slate-500 mr-1"
    >
      Stress scenarios:
    </span>
  </div>
  <svg
    aria-label="DRISHTI stress scenario overlay"
    data-testid="stress-svg"
    height="288"
    style="font-family: system-ui, sans-serif;"
    viewBox="0 0 480 288"
    width="480"
  >
    <rect
      fill="#f8fafc"
      height="240"
      rx="8"
      stroke="#e2e8f0"
      stroke-width="1"
      width="424"
      x="48"
      y="8"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1"
      x1="48"
      x2="472"
      y1="128"
      y2="128"
    />
    <line
      stroke="#cbd5e1"
      stroke-dasharray="4 3"
      stroke-width="1"
      x1="260"
      x2="260"
      y1="8"
      y2="248"
    />
    <text
      fill="#94a3b8"
      font-size="9"
      text-anchor="middle"
      x="154"
      y="264"
    >
      Low FHS
    </text>
    <text
      fill="#94a3b8"
      font-size="9"
      text-anchor="middle"
      x="366"
      y="264"
    >
      High FHS
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="9"
      text-anchor="end"
      x="36"
      y="68"
    >
      High T
    </text>
    <text
      dominant-baseline="central"
      fill="#94a3b8"
      font-size="9"
      text-anchor="end"
      x="36"
      y="188"
    >
      Low T
    </text>
    <circle
      cx="353.28"
      cy="68"
      fill="#1e293b"
      r="6"
      stroke="white"
      stroke-width="2"
    />
    <text
      fill="#1e293b"
      font-size="9"
      font-weight="600"
      x="363.28"
      y="60"
    >
      Baseline
    </text>
  </svg>
  <div
    class="
          mt-4 rounded-lg border-2 p-4 flex items-center justify-between
          border-slate-200 bg-slate-50
        "
    data-testid="worst-case-summary"
  >
    <div>
      <p
        class="text-xs font-medium text-slate-500"
      >
        Action unchanged under stress
      </p>
      <p
        class="text-lg font-bold mt-0.5"
        data-testid="worst-case-action"
        style="color: rgb(21, 128, 61);"
      >
        Approve
      </p>
    </div>
    <div
      class="text-right"
    >
      <p
        class="text-xs text-slate-500"
      >
        Baseline
      </p>
      <p
        class="text-sm font-semibold"
        data-testid="baseline-action"
        style="color: rgb(21, 128, 61);"
      >
        Approve
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual regression: Banker underwriting ScoreBreakdown snapshots snapshot: both missing 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 gap-6"
  data-testid="score-breakdown"
>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="trust-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        TRUST Score
      </h3>
    </div>
    <div
      class="flex items-center gap-3 py-6 text-slate-400"
      data-testid="trust-breakdown-missing"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark w-6 h-6 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <div>
        <p
          class="text-sm font-medium"
        >
          Not enough data
        </p>
        <p
          class="text-xs mt-0.5"
        >
          Data has not been collected yet for this score.
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="fhs-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        Financial Health
      </h3>
    </div>
    <div
      class="flex items-center gap-3 py-6 text-slate-400"
      data-testid="fhs-breakdown-missing"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark w-6 h-6 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <div>
        <p
          class="text-sm font-medium"
        >
          Not enough data
        </p>
        <p
          class="text-xs mt-0.5"
        >
          Data has not been collected yet for this score.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual regression: Banker underwriting ScoreBreakdown snapshots snapshot: full data (both scores) 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 gap-6"
  data-testid="score-breakdown"
>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="trust-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        TRUST Score
      </h3>
    </div>
    <div
      class="flex items-baseline gap-3 mb-5"
    >
      <span
        class="text-3xl font-bold"
        data-testid="trust-breakdown-total"
        style="color: rgb(180, 83, 9);"
      >
        75
      </span>
      <span
        class="text-xs font-semibold px-2 py-0.5 rounded-full"
        data-testid="trust-breakdown-band"
        style="background-color: rgba(180, 83, 9, 0.094); color: rgb(180, 83, 9);"
      >
        Building
      </span>
    </div>
    <div
      class="space-y-2.5"
    >
      <div
        data-testid="trust-breakdown-row-identity"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Identity
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            80
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 80%; background-color: rgb(21, 128, 61);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-behavioural"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Behavioural
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            70
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 70%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-repayment"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Repayment History
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            75
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 75%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-attestation"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Attestation
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            65
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 65%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-3 border-t border-slate-100 text-xs text-slate-400"
    >
      <span>
        Updated: 
        1 Apr 2026
      </span>
    </div>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="fhs-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        Financial Health
      </h3>
    </div>
    <div
      class="flex items-baseline gap-3 mb-5"
    >
      <span
        class="text-3xl font-bold"
        data-testid="fhs-breakdown-total"
        style="color: rgb(180, 83, 9);"
      >
        68
      </span>
      <span
        class="text-xs font-semibold px-2 py-0.5 rounded-full"
        data-testid="fhs-breakdown-band"
        style="background-color: rgba(180, 83, 9, 0.094); color: rgb(180, 83, 9);"
      >
        Building
      </span>
      <span
        class="text-xs font-semibold text-slate-500"
        data-testid="fhs-breakdown-grade"
      >
        Grade 
        B
      </span>
    </div>
    <div
      class="space-y-2.5"
    >
      <div
        data-testid="fhs-breakdown-row-cashFlowStability"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Income Stability
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            72
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 72%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-balanceAdequacy"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Surplus
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            65
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 65%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-incomeDiversity"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Income Diversity
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            60
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 60%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-debtDiscipline"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Debt Discipline
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            80
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 80%; background-color: rgb(21, 128, 61);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-govtTransferAccess"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Govt Transfer Access
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            50
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 50%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-digitalAdoption"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Digital Adoption
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            55
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 55%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-3 border-t border-slate-100 text-xs text-slate-400"
    >
      <span>
        Updated: 
        5 Apr 2026
      </span>
      <span>
         · 
      </span>
      <span>
        raw transactions · 240 txns
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual regression: Banker underwriting ScoreBreakdown snapshots snapshot: missing FHS 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 gap-6"
  data-testid="score-breakdown"
>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="trust-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        TRUST Score
      </h3>
    </div>
    <div
      class="flex items-baseline gap-3 mb-5"
    >
      <span
        class="text-3xl font-bold"
        data-testid="trust-breakdown-total"
        style="color: rgb(180, 83, 9);"
      >
        75
      </span>
      <span
        class="text-xs font-semibold px-2 py-0.5 rounded-full"
        data-testid="trust-breakdown-band"
        style="background-color: rgba(180, 83, 9, 0.094); color: rgb(180, 83, 9);"
      >
        Building
      </span>
    </div>
    <div
      class="space-y-2.5"
    >
      <div
        data-testid="trust-breakdown-row-identity"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Identity
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            80
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 80%; background-color: rgb(21, 128, 61);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-behavioural"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Behavioural
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            70
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 70%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-repayment"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Repayment History
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            75
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 75%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-attestation"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Attestation
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            65
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 65%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-3 border-t border-slate-100 text-xs text-slate-400"
    >
      <span>
        Updated: 
        1 Apr 2026
      </span>
    </div>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="fhs-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        Financial Health
      </h3>
    </div>
    <div
      class="flex items-center gap-3 py-6 text-slate-400"
      data-testid="fhs-breakdown-missing"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark w-6 h-6 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <div>
        <p
          class="text-sm font-medium"
        >
          Not enough data
        </p>
        <p
          class="text-xs mt-0.5"
        >
          Data has not been collected yet for this score.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual regression: Banker underwriting ScoreBreakdown snapshots snapshot: missing TRUST 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 gap-6"
  data-testid="score-breakdown"
>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="trust-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        TRUST Score
      </h3>
    </div>
    <div
      class="flex items-center gap-3 py-6 text-slate-400"
      data-testid="trust-breakdown-missing"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark w-6 h-6 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <div>
        <p
          class="text-sm font-medium"
        >
          Not enough data
        </p>
        <p
          class="text-xs mt-0.5"
        >
          Data has not been collected yet for this score.
        </p>
      </div>
    </div>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="fhs-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        Financial Health
      </h3>
    </div>
    <div
      class="flex items-baseline gap-3 mb-5"
    >
      <span
        class="text-3xl font-bold"
        data-testid="fhs-breakdown-total"
        style="color: rgb(180, 83, 9);"
      >
        68
      </span>
      <span
        class="text-xs font-semibold px-2 py-0.5 rounded-full"
        data-testid="fhs-breakdown-band"
        style="background-color: rgba(180, 83, 9, 0.094); color: rgb(180, 83, 9);"
      >
        Building
      </span>
      <span
        class="text-xs font-semibold text-slate-500"
        data-testid="fhs-breakdown-grade"
      >
        Grade 
        B
      </span>
    </div>
    <div
      class="space-y-2.5"
    >
      <div
        data-testid="fhs-breakdown-row-cashFlowStability"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Income Stability
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            72
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 72%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-balanceAdequacy"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Surplus
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            65
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 65%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-incomeDiversity"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Income Diversity
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            60
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 60%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-debtDiscipline"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Debt Discipline
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            80
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 80%; background-color: rgb(21, 128, 61);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-govtTransferAccess"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Govt Transfer Access
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            50
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 50%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-digitalAdoption"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Digital Adoption
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            55
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 55%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-3 border-t border-slate-100 text-xs text-slate-400"
    >
      <span>
        Updated: 
        5 Apr 2026
      </span>
      <span>
         · 
      </span>
      <span>
        raw transactions · 240 txns
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual regression: Banker underwriting ScoreBreakdown snapshots snapshot: stale flags 1`] = `
<div
  class="grid grid-cols-1 md:grid-cols-2 gap-6"
  data-testid="score-breakdown"
>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="trust-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        TRUST Score
      </h3>
      <span
        class="flex items-center gap-1 text-xs text-amber-600"
        data-testid="trust-breakdown-stale"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3.5 h-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 6v6l4 2"
          />
        </svg>
        Stale
      </span>
    </div>
    <div
      class="flex items-baseline gap-3 mb-5"
    >
      <span
        class="text-3xl font-bold"
        data-testid="trust-breakdown-total"
        style="color: rgb(180, 83, 9);"
      >
        75
      </span>
      <span
        class="text-xs font-semibold px-2 py-0.5 rounded-full"
        data-testid="trust-breakdown-band"
        style="background-color: rgba(180, 83, 9, 0.094); color: rgb(180, 83, 9);"
      >
        Building
      </span>
    </div>
    <div
      class="space-y-2.5"
    >
      <div
        data-testid="trust-breakdown-row-identity"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Identity
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            80
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 80%; background-color: rgb(21, 128, 61);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-behavioural"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Behavioural
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            70
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 70%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-repayment"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Repayment History
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            75
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 75%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="trust-breakdown-row-attestation"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Attestation
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            65
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 65%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-3 border-t border-slate-100 text-xs text-slate-400"
    >
      <span>
        Updated: 
        1 Apr 2026
      </span>
    </div>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white p-5"
    data-testid="fhs-breakdown"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-sm font-semibold text-slate-800"
      >
        Financial Health
      </h3>
      <span
        class="flex items-center gap-1 text-xs text-amber-600"
        data-testid="fhs-breakdown-stale"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3.5 h-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 6v6l4 2"
          />
        </svg>
        Stale
      </span>
    </div>
    <div
      class="flex items-baseline gap-3 mb-5"
    >
      <span
        class="text-3xl font-bold"
        data-testid="fhs-breakdown-total"
        style="color: rgb(180, 83, 9);"
      >
        68
      </span>
      <span
        class="text-xs font-semibold px-2 py-0.5 rounded-full"
        data-testid="fhs-breakdown-band"
        style="background-color: rgba(180, 83, 9, 0.094); color: rgb(180, 83, 9);"
      >
        Building
      </span>
      <span
        class="text-xs font-semibold text-slate-500"
        data-testid="fhs-breakdown-grade"
      >
        Grade 
        B
      </span>
    </div>
    <div
      class="space-y-2.5"
    >
      <div
        data-testid="fhs-breakdown-row-cashFlowStability"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Income Stability
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            72
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 72%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-balanceAdequacy"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Surplus
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            65
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 65%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-incomeDiversity"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Income Diversity
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            60
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 60%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-debtDiscipline"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Debt Discipline
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            80
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 80%; background-color: rgb(21, 128, 61);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-govtTransferAccess"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Govt Transfer Access
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            50
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 50%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
      <div
        data-testid="fhs-breakdown-row-digitalAdoption"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-xs text-slate-600"
          >
            Digital Adoption
          </span>
          <span
            class="text-xs font-semibold text-slate-800"
          >
            55
          </span>
        </div>
        <div
          class="h-1.5 rounded-full bg-slate-100 overflow-hidden"
        >
          <div
            class="h-full rounded-full transition-all duration-300"
            style="width: 55%; background-color: rgb(180, 83, 9);"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-3 border-t border-slate-100 text-xs text-slate-400"
    >
      <span>
        Updated: 
        5 Apr 2026
      </span>
      <span>
         · 
      </span>
      <span>
        raw transactions · 240 txns
      </span>
    </div>
  </div>
</div>
`;
